elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: elasticsearch
    spec:
      containers:
      - args:
        - elasticsearch
        - -Des.network.host=0.0.0.0
        image: ind3x/rpi-elasticsearch:latest
        name: elasticsearch
        ports:
        - containerPort: 9200
        - containerPort: 9300
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch-claim0
      restartPolicy: Always
      volumes:
      - name: elasticsearch-claim0
        persistentVolumeClaim:
          claimName: elasticsearch-claim0
status: {}
