kibana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: kibana
    spec:
      containers:
      - image: melcher83/rpi-kibana:4.12.18
        name: kibana
        ports:
        - containerPort: 5601
        resources: {}
        volumeMounts:
        - mountPath: /opt/kibana/config/
          name: kibana-claim0
      restartPolicy: Always
      volumes:
      - name: kibana-claim0
        persistentVolumeClaim:
          claimName: kibana-claim0
status: {}
