kibana-ingress.yml
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: default
  labels:
    k8s-app: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-controller
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-controller
      annotations:
        scheduler.alpha.kubernetes.io/tolerations: |
          [
            {
              "key": "dedicated",
              "operator": "Equal",
              "value": "master",
              "effect": "NoSchedule"
            }
          ]
    spec:
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: "pi1"


      containers:
      - image: melcher83/rpi-traefik:4.8.18
        name: traefik-ingress-controller
        ports:
        - name: http
          containerPort: 5601 
          hostPort: 5601
        - name: admin
          containerPort: 8888
        args:
        - --web
        - --web.address=localhost:8888
        - --kubernetes
