logstash-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: logstash
    spec:
      containers:
      - args:
        - logstash
        - -f
        - /etc/logstash/conf.d/logstash.conf
        image: ind3x/rpi-logstash:latest
        name: logstash
        ports:
        - containerPort: 5000
        - containerPort: 514
          protocol: UDP
        resources: {}
        volumeMounts:
        - mountPath: /etc/logstash/conf.d
          name: logstash-claim0
      restartPolicy: Always
      volumes:
      - name: logstash-claim0
        persistentVolumeClaim:
          claimName: logstash-claim0
status: {}
