logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  - name: "514"
    port: 514
    protocol: UDP
    targetPort: 514
  selector:
    io.kompose.service: logstash
status:
  loadBalancer: {}
