hypriot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
